--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
