--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "bootstrap": "^4.6.0",
     "classnames": "^2.3.1",
     "gh-pages": "^3.2.0",
+    "highcharts": "^9.3.2",
+    "highcharts-react-official": "^3.1.0",
     "moment": "^2.29.1",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
+    "react-bootstrap-table-next": "^4.0.3",
     "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -52,5 +55,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-bootstrap-table-next": "^4.0.17",
+    "@types/react-highcharts": "^16.0.3"
   }
 }
