--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@toast-ui/react-grid": "^4.20.0",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.20.13",
     "@types/react": "^17.0.8",
@@ -18,6 +19,7 @@
     "gh-pages": "^3.2.0",
     "highcharts": "^9.3.2",
     "highcharts-react-official": "^3.1.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
@@ -57,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.178",
     "@types/react-bootstrap-table-next": "^4.0.17",
     "@types/react-highcharts": "^16.0.3"
   }
